src/main/java/antrl/antrl/com/antr/PseudoCodeParser.java
// Generated from C:/Users/ivanf/IdeaProjects/Course_Compilers/src/main/java/antrl\PseudoCode.g4 by ANTLR 4.8
package antrl.com.antr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseudoCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, TRUE=2, FALSE=3, MINUS=4, PLUS=5, MULTY=6, DEV=7, MOD=8, LESS_SIGH=9, 
		MORE_SIGN=10, LESS_EQUAL_SIGN=11, MORE_EQUAL_SIGN=12, EQUAL_SIGH=13, NOT_EQUAL_SIGN=14, 
		OR=15, AND=16, PLUS_PLUS=17, MINUS_MINUS=18, ASSIGN_SIGN=19, NEW_LINE=20, 
		INT32=21, INT64=22, FLOAT=23, STRING=24, BOOLEAN=25, AUTO=26, LEFT_SQUARE_BRACKET=27, 
		RIGHT_SQUARE_BRACKET=28, LEFT_ROUND_BRACKET=29, RIGHT_ROUND_BRACKET=30, 
		IF=31, THEN=32, ELSE=33, ENDIF=34, WHILE=35, ENDWHILE=36, FOR=37, TO=38, 
		ENDFOR=39, FOREACH=40, IN=41, ENDFOREACH=42, FUNCTION=43, VOID=44, BEGIN=45, 
		END_FUNCTION=46, RETURN=47, MAP=48, COMMA=49, COLON_SIGH=50, NEGATIVE=51, 
		POSITIVE=52, FLOAT_NUMBER=53, STRING_VALUE=54, ID=55;
	public static final int
		RULE_program = 0, RULE_source_element = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_integer = 4, RULE_literal = 5, RULE_boolean_literal = 6, RULE_numeric_literal = 7, 
		RULE_string_literal = 8, RULE_call_id = 9, RULE_literal_true = 10, RULE_literal_false = 11, 
		RULE_literal_minus = 12, RULE_literal_plus = 13, RULE_literal_multy = 14, 
		RULE_literal_dev = 15, RULE_literal_mod = 16, RULE_literal_less_sign = 17, 
		RULE_literal_more_sign = 18, RULE_literal_less_equal_sign = 19, RULE_literal_more_equal_sign = 20, 
		RULE_literal_equal_sign = 21, RULE_literal_not_equal_sign = 22, RULE_literal_or = 23, 
		RULE_literal_and = 24, RULE_literal_plus_plus = 25, RULE_literal_minus_minis = 26, 
		RULE_literal_assign_sign = 27, RULE_literal_new_line = 28, RULE_literal_int_32 = 29, 
		RULE_literal_int_64 = 30, RULE_literal_float = 31, RULE_literal_string = 32, 
		RULE_literal_boolean = 33, RULE_literal_auto = 34, RULE_literal_left_square_bracket = 35, 
		RULE_literal_right_square_bracket = 36, RULE_literal_left_round_bracket = 37, 
		RULE_literal_right_round_bracket = 38, RULE_literal_if = 39, RULE_literal_then = 40, 
		RULE_literal_else = 41, RULE_literal_endif = 42, RULE_literal_while = 43, 
		RULE_literal_endwhile = 44, RULE_literal_for = 45, RULE_literal_to = 46, 
		RULE_literal_endfor = 47, RULE_literal_foreach = 48, RULE_literal_in = 49, 
		RULE_literal_endforeach = 50, RULE_literal_function = 51, RULE_literal_void = 52, 
		RULE_literal_begin = 53, RULE_literal_end_function = 54, RULE_literal_return = 55, 
		RULE_literal_map = 56, RULE_literal_comma = 57, RULE_literal_colon_sign = 58, 
		RULE_literal_negative = 59, RULE_literal_postitive = 60, RULE_literal_float_number = 61, 
		RULE_literal_string_value = 62, RULE_literal_identifier = 63, RULE_simple_obj = 64, 
		RULE_multiplicative = 65, RULE_additive = 66, RULE_relational = 67, RULE_equality = 68, 
		RULE_logical = 69, RULE_postfix = 70, RULE_assignment_expr = 71, RULE_expr = 72, 
		RULE_expr_statement = 73, RULE_empty_statement = 74, RULE_types_simple = 75, 
		RULE_array = 76, RULE_array_in_function = 77, RULE_types = 78, RULE_varible = 79, 
		RULE_varible_in_function = 80, RULE_variable_declaration = 81, RULE_variable_statement = 82, 
		RULE_if_statement = 83, RULE_iteration_statements = 84, RULE_iteration_statement_while = 85, 
		RULE_iteration_statement_for = 86, RULE_iteration_statement_for_each = 87, 
		RULE_return_statement = 88, RULE_function_declaration = 89, RULE_return_types = 90, 
		RULE_formal_parameter_list = 91, RULE_function_call = 92, RULE_function_params = 93;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "source_element", "statements", "statement", "integer", "literal", 
			"boolean_literal", "numeric_literal", "string_literal", "call_id", "literal_true", 
			"literal_false", "literal_minus", "literal_plus", "literal_multy", "literal_dev", 
			"literal_mod", "literal_less_sign", "literal_more_sign", "literal_less_equal_sign", 
			"literal_more_equal_sign", "literal_equal_sign", "literal_not_equal_sign", 
			"literal_or", "literal_and", "literal_plus_plus", "literal_minus_minis", 
			"literal_assign_sign", "literal_new_line", "literal_int_32", "literal_int_64", 
			"literal_float", "literal_string", "literal_boolean", "literal_auto", 
			"literal_left_square_bracket", "literal_right_square_bracket", "literal_left_round_bracket", 
			"literal_right_round_bracket", "literal_if", "literal_then", "literal_else", 
			"literal_endif", "literal_while", "literal_endwhile", "literal_for", 
			"literal_to", "literal_endfor", "literal_foreach", "literal_in", "literal_endforeach", 
			"literal_function", "literal_void", "literal_begin", "literal_end_function", 
			"literal_return", "literal_map", "literal_comma", "literal_colon_sign", 
			"literal_negative", "literal_postitive", "literal_float_number", "literal_string_value", 
			"literal_identifier", "simple_obj", "multiplicative", "additive", "relational", 
			"equality", "logical", "postfix", "assignment_expr", "expr", "expr_statement", 
			"empty_statement", "types_simple", "array", "array_in_function", "types", 
			"varible", "varible_in_function", "variable_declaration", "variable_statement", 
			"if_statement", "iteration_statements", "iteration_statement_while", 
			"iteration_statement_for", "iteration_statement_for_each", "return_statement", 
			"function_declaration", "return_types", "formal_parameter_list", "function_call", 
			"function_params"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'true'", "'false'", "'-'", "'+'", "'*'", "'/'", "'%'", "'<'", 
			"'>'", "'<='", "'>='", "'=='", "'!='", "'OR'", "'AND'", "'++'", "'--'", 
			"'<-'", "'\n'", "'int32'", "'int64'", "'float'", "'String'", "'bool'", 
			"'auto'", "'['", "']'", "'('", "')'", "'IF'", "'THEN'", "'ELSE'", "'ENDIF'", 
			"'WHILE'", "'ENDWHILE'", "'FOR'", "'TO'", "'ENDFOR'", "'FOREACH'", "'IN'", 
			"'ENDFOREACH'", "'FUNCTION'", "'VOID'", "'BEGIN'", "'END_FUNCTION'", 
			"'RETURN'", "'Map'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SPACE", "TRUE", "FALSE", "MINUS", "PLUS", "MULTY", "DEV", "MOD", 
			"LESS_SIGH", "MORE_SIGN", "LESS_EQUAL_SIGN", "MORE_EQUAL_SIGN", "EQUAL_SIGH", 
			"NOT_EQUAL_SIGN", "OR", "AND", "PLUS_PLUS", "MINUS_MINUS", "ASSIGN_SIGN", 
			"NEW_LINE", "INT32", "INT64", "FLOAT", "STRING", "BOOLEAN", "AUTO", "LEFT_SQUARE_BRACKET", 
			"RIGHT_SQUARE_BRACKET", "LEFT_ROUND_BRACKET", "RIGHT_ROUND_BRACKET", 
			"IF", "THEN", "ELSE", "ENDIF", "WHILE", "ENDWHILE", "FOR", "TO", "ENDFOR", 
			"FOREACH", "IN", "ENDFOREACH", "FUNCTION", "VOID", "BEGIN", "END_FUNCTION", 
			"RETURN", "MAP", "COMMA", "COLON_SIGH", "NEGATIVE", "POSITIVE", "FLOAT_NUMBER", 
			"STRING_VALUE", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudoCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudoCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Source_elementContext> source_element() {
			return getRuleContexts(Source_elementContext.class);
		}
		public Source_elementContext source_element(int i) {
			return getRuleContext(Source_elementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(188);
				source_element();
				}
				}
				setState(191); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << NEW_LINE) | (1L << INT32) | (1L << INT64) | (1L << FLOAT) | (1L << STRING) | (1L << BOOLEAN) | (1L << AUTO) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << FOREACH) | (1L << FUNCTION) | (1L << MAP) | (1L << NEGATIVE) | (1L << POSITIVE) | (1L << FLOAT_NUMBER) | (1L << STRING_VALUE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Source_elementContext extends ParserRuleContext {
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Source_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterSource_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitSource_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitSource_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Source_elementContext source_element() throws RecognitionException {
		Source_elementContext _localctx = new Source_elementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_source_element);
		try {
			int _alt;
			setState(199);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(194); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(193);
						function_declaration();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(196); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case TRUE:
			case FALSE:
			case NEW_LINE:
			case INT32:
			case INT64:
			case FLOAT:
			case STRING:
			case BOOLEAN:
			case AUTO:
			case IF:
			case WHILE:
			case FOR:
			case FOREACH:
			case MAP:
			case NEGATIVE:
			case POSITIVE:
			case FLOAT_NUMBER:
			case STRING_VALUE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				statements();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(202); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(201);
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(204); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Variable_statementContext variable_statement() {
			return getRuleContext(Variable_statementContext.class,0);
		}
		public Empty_statementContext empty_statement() {
			return getRuleContext(Empty_statementContext.class,0);
		}
		public Expr_statementContext expr_statement() {
			return getRuleContext(Expr_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Iteration_statementsContext iteration_statements() {
			return getRuleContext(Iteration_statementsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(212);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(206);
				function_call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(207);
				variable_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(208);
				empty_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(209);
				expr_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(210);
				if_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(211);
				iteration_statements();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public Literal_postitiveContext literal_postitive() {
			return getRuleContext(Literal_postitiveContext.class,0);
		}
		public Literal_negativeContext literal_negative() {
			return getRuleContext(Literal_negativeContext.class,0);
		}
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_integer);
		try {
			setState(216);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case POSITIVE:
				enterOuterAlt(_localctx, 1);
				{
				setState(214);
				literal_postitive();
				}
				break;
			case NEGATIVE:
				enterOuterAlt(_localctx, 2);
				{
				setState(215);
				literal_negative();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public Boolean_literalContext boolean_literal() {
			return getRuleContext(Boolean_literalContext.class,0);
		}
		public Numeric_literalContext numeric_literal() {
			return getRuleContext(Numeric_literalContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_literal);
		try {
			setState(221);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(218);
				boolean_literal();
				}
				break;
			case NEGATIVE:
			case POSITIVE:
			case FLOAT_NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(219);
				numeric_literal();
				}
				break;
			case STRING_VALUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(220);
				string_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_literalContext extends ParserRuleContext {
		public Literal_trueContext literal_true() {
			return getRuleContext(Literal_trueContext.class,0);
		}
		public Literal_falseContext literal_false() {
			return getRuleContext(Literal_falseContext.class,0);
		}
		public Boolean_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).enterBoolean_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeListener ) ((PseudoCodeListener)listener).exitBoolean_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoCodeVisitor ) return ((PseudoCodeVisitor<? extends T>)visitor).visitBoolean_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Boolean_literalContext boolean_literal() throws RecognitionException {
		Boolean_literalContext _localctx = new Boolean_literalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_boolean_literal);
		try {
			setState(225);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(223);
				literal_true();
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(224);
				literal_false();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
